2001-12-13  Patrick Burke <takhisisii@yahoo.com.au>
	* usecode/ucxt/src/opcodes.cc: Included a 'fix' for undeclared __STRING
	under solaris.

2001-12-13  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in, Makefile.am, debian/Makefile.am: fixes for make dist
	to include new debian stuff

2001-12-13  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc,drag.h (Dragging_info): New class to handle dragging.

2001-12-09  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: Don't set schedules of party members.

2001-12-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/gump_utils.h: #include <cstring>

2001-12-12  Tristan Tarrant <nadir@users.sourceforge.net>
	* gumps/gump_utils.h: #include <string.h> to get it to compile under
	Solaris with g++
	* usecode/ucxt/data/Makefile.am: include opcodes.txt in EXTRA_DIST

2001-12-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* debian/*: new debian dir from Michael Z.

2001-12-11  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/ucfunc.cc: Code cleanup
	* usecode/ucxt/data/opcodes.txt: Assembler comment output tidying

2001-12-10  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/: Added intrinsic 'name' output under -fa rather then
	  the original intrinsic number for the opcodes 'callis' and 'calli'.

2001-12-08  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Get guard shapes for SI.
	* mapedit/studio.cc: Try to reconnect to Exult automatically.
	* gamewin.cc: A 'patch' initgame.dat is NOT a new game, in the
	sense that it has the original U7 structure.

2001-12-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/ucxt/src/Makefile.am: fixed include dirs
	
2001-12-07  Jeff Freedman  <jeff@amy.nerble.net>

	* readnpcs.cc: BG NPC's 293-297 are not valid and should be skipped.
	* usecode/ucinternal.cc: Don't create script for NULL object.

	* objs/chunks.cc: Found a case where it's BAD to use an iterator,